SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/EBizCharge_Received_Payments__c.object-meta.xml
<CustomObject>
    <label>EBizCharge Received Payments</label>
    <nameField>
        <label>EBizCharge Received Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge Received Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>