SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/AuthCode__c.field-meta.xml
<CustomField>
    <fullName>AuthCode__c</fullName>
    <label>AuthCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>