SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/CustNum__c.field-meta.xml
<CustomField>
    <fullName>CustNum__c</fullName>
    <label>CustNum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>