SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/CustomerEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmailAddress__c</fullName>
    <label>CustomerEmailAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>