SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>CustomerId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>