SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/DivisionId__c.field-meta.xml
<CustomField>
    <fullName>DivisionId__c</fullName>
    <label>DivisionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>