SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/ExternalTxnId__c.field-meta.xml
<CustomField>
    <fullName>ExternalTxnId__c</fullName>
    <label>ExternalTxnId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>