SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/InvoiceInternalId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceInternalId__c</fullName>
    <label>InvoiceInternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>