SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>InvoiceNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>