SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/Last4__c.field-meta.xml
<CustomField>
    <fullName>Last4__c</fullName>
    <description>last 4 degit</description>
    <label>Last4</label>
    <length>5</length>
    <type>Text</type>
</CustomField>