SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>