SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Id__c</fullName>
    <label>Payment Method Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>