SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/PaymentInternalId__c.field-meta.xml
<CustomField>
    <fullName>PaymentInternalId__c</fullName>
    <label>PaymentInternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>