SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/PaymentRequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestDateTime__c</fullName>
    <label>PaymentRequestDateTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>