SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/PaymentSourceId__c.field-meta.xml
<CustomField>
    <fullName>PaymentSourceId__c</fullName>
    <label>PaymentSourceId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>