SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/PoNum__c.field-meta.xml
<CustomField>
    <fullName>PoNum__c</fullName>
    <label>PoNum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>