SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/RefNum__c.field-meta.xml
<CustomField>
    <fullName>RefNum__c</fullName>
    <label>RefNum</label>
    <length>30</length>
    <type>Text</type>
</CustomField>