SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/TransactionLookupKey__c.field-meta.xml
<CustomField>
    <fullName>TransactionLookupKey__c</fullName>
    <label>TransactionLookupKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>