SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Received_Payments__c/fields/Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Type_Id__c</fullName>
    <label>Type Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>